--- a/ChinookConsoleApp/ChinookConsoleApp.csproj
+++ b/ChinookConsoleApp/ChinookConsoleApp.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddEmployee.cs" />
+    <Compile Include="DeleteEmployee.cs" />
     <Compile Include="ListEmployees.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
